# docile

./: .env  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.gpu  LICENSE  Makefile  README.md  docker-compose.yml  download_dataset.sh  m1_create_missing_symlinks.sh  pyproject.toml
.github/workflows/: tests.yml
baselines/: README.md
baselines/NER/: README.md  data_collator.py  docile_inference_NER_multilabel.py  docile_inference_NER_multilabel_layoutLMv3.py  docile_pretrain_BERT_onfly.py  docile_train_NER_multilabel.py  docile_train_NER_multilabel_layoutLMv3.py  docile_train_NER_multilabel_layoutLMv3_onfly.py  docile_train_NER_multilabel_onfly.py  helpers.py  my_layoutlmv3.py  my_roberta_multilabel.py  run_RoBERTa_pretraining.sh  run_docile_train_LayoutLMv3_multilabel.sh  run_docile_train_LayoutLMv3_multilabel_fromOurPretrained.sh  run_docile_train_NER_multilabel.sh  run_docile_train_NER_multilabel_LayoutLMv3_onfly.sh  run_docile_train_NER_multilabel_fromOurPretrained.sh  run_docile_train_NER_multilabel_onfly.sh  run_docile_train_NER_multilabel_with2Demb.sh  run_inference.sh  run_training.sh
baselines/layoutlmv3_pretrain/: lr_scheduler.py  pretrain.py
baselines/table-transformer/: README.md  base_config.yaml  main.py  predict.py  table_detection_config.yaml  table_line_item_detection_config.yaml  table_transformer.py
data/emails/: email-announcements-000.rtf  email-announcements-001.rtf  email-announcements-002.rtf  email-announcements-003.rtf  email-announcements-004.rtf  email-announcements-005.rtf  email-announcements-006.rtf  email-announcements-007.rtf  email-announcements-008.rtf  email-announcements-009.rtf  email-announcements-010.rtf  email-announcements-011.rtf  email-announcements-012.rtf  email-announcements-013.rtf  email-announcements-014.rtf  email-announcements-015.rtf  email-announcements-016.rtf  email-announcements-017.rtf  email-announcements-018.rtf  email-announcements-019.rtf  email-customer-service-000.rtf  email-customer-service-001.rtf  email-customer-service-002.rtf  email-customer-service-003.rtf  email-customer-service-004.rtf  email-customer-service-005.rtf  email-customer-service-006.rtf  email-customer-service-007.rtf  email-customer-service-008.rtf  email-customer-service-009.rtf  email-meeting-invitation-000.rtf  email-meeting-invitation-001.rtf  email-meeting-invitation-002.rtf  email-meeting-invitation-003.rtf  email-meeting-invitation-004.rtf  email-meeting-invitation-005.rtf  email-meeting-invitation-006.rtf  email-meeting-invitation-007.rtf  email-meeting-invitation-008.rtf  email-meeting-invitation-009.rtf  (+80 more)
docile/: __init__.py  paths.py  types.py
docile/cli/: evaluate.py
docile/dataset/: __init__.py  bbox.py  cached.py  cached_object.py  dataset.py  dataset_store.py  document.py  document_annotation.py  document_images.py  document_ocr.py  document_pdf.py  field.py  paths.py  pcc.py  table_grid.py  types.py
docile/debug_tools/: draw_fields.py
docile/document/: __init__.py  document.py  document_annotation.py  document_ocr.py  document_pdf.py
docile/evaluation/: __init__.py  average_precision.py  evaluate.py  evaluation_subsets.py  line_item_matching.py  metrics.py  pcc.py  pcc_field_matching.py
docile/tools/: dataset_browser.ipynb  dataset_browser.py  dbg_my_browser_for_QA.ipynb  my_dataset_browser.py  print_results.py
tests/: conftest.py  test_dataset.py  test_document.py
tests/data/sample-dataset/: dev.json
tests/dataset/: test_bbox.py  test_dataset.py  test_document.py  test_document_annotation.py  test_field.py  test_pcc.py
tests/evaluation/: average_precision.py  evaluate.py  test_average_precision.py  test_evaluate.py  test_line_item_matching.py  test_metrics.py  test_pcc.py  test_pcc_field_matching  test_pcc_field_matching.py
tests/metrics/: test_metrics.py
tutorials/: Open4Business Dataset Visualization.ipynb  README.md  Visualizing documents.ipynb  dataset_test.ipynb  langchain_gettinStarted.ipynb  load_and_sample_dataset.ipynb  load_and_sample_dataset.md  quickstart.ipynb  quickstart.md
tutorials/.ipynb_checkpoints/: load_and_sample_dataset-checkpoint.ipynb  quickstart-checkpoint.ipynb
