[tool.poetry]
name = "docile-benchmark"
version = "0.3.1"
description = "Tools to work with the DocILE dataset and benchmark"
authors = [
    "Stepan Simsa <stepan.simsa@rossum.ai>",
    "Matyas Skalicky <matyas.skalicky@rossum.ai>",
    "Milan Sulc <milan.sulc@rossum.ai>",
    "Michal Uricar <michal.uricar@rossum.ai>",
    "Matej Kocian <matej.kocian@rossum.ai>",
    "Yash Patel <patelyas@fel.cvut.cz>",
]
readme = "README.md"
homepage = "https://docile.rossum.ai/"
repository = "https://github.com/rossumai/docile"
packages = [
    { include = "docile" },
]

[tool.poetry.dependencies]
python = "^3.8.2"
tqdm = "^4.64.1"
pdf2image = "^1.16.0"
pillow = ">=9.1.0"
networkx = {extras = ["default"], version = "^2.8.8"}
tabulate = "^0.9.0"
click = "^8.0.0"

# Optional dependencies included in the `extras` below
# interactive
jupyterlab = { version = "^3.5.0", optional = true }
ipywidgets = { version = "^8.0.4", optional = true }
plotly = { version = "^5.12.0", optional = true }
# ocr
python-doctr = { version = "^0.6.0", optional = true }
torch = { version = "^1.13.1", optional = true }
torchvision = { version = "^0.14.1", optional = true }
opencv-python = { version = "^4.6.0.66", optional = true }
# baselines
transformers = { version = "~4.26.1", optional = true }
# pin datasets version to avoid https://github.com/apache/arrow/issues/34455
datasets = { version = "^2.8.0,<2.10.0", extras = ["s3"], optional = true }
torchmetrics = { version = "^0.11.0", optional = true }
sentencepiece = { version = "^0.1.97", optional = true }
tensorboard = { version = "^2.11.2", optional = true }
sklearn = { version = "^0.0.post1", optional = true }
scikit-learn = { version = "^1.2.1", optional = true }
pytorch-lightning = { extras = ["extra"], version = "^1.8.3", optional = true }
timm = { version = "^0.6.11", optional = true }

[tool.poetry.extras]
interactive = ["jupyterlab", "ipywidgets", "plotly"]
ocr = ["python-doctr", "torch", "torchvision", "opencv-python"]
baselines = [
    "torch",
    "torchvision",
    "transformers",
    "datasets",
    "torchmetrics",
    "sentencepiece",
    "tensorboard",
    "sklearn",
    "scikit-learn",
    "pytorch-lightning",
    "timm",
]

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
pytest = "^7.2.0"

[tool.poetry.scripts]
docile_evaluate = "docile.cli.evaluate:evaluate"
docile_print_evaluation_report = "docile.cli.evaluate:print_evaluation_report"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
# NOTE: you have to use single-quoted strings in TOML for regular expressions.
# It's the equivalent of r-strings in Python.  Multiline strings are treated as
# verbose regular expressions by Black.  Use [ ] to denote a significant space
# character.
line-length = 99
target-version = ["py38", "py39", "py310", "py311"]
include = '\.py$'
exclude = '/(\.git|\.mypy_cache|__pycache__|\.pytest_cache|data|docs|)/'

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 99
ensure_newline_before_comments = true

[tool.pydocstyle]
convention = "numpy"
# D202 - not compatible with black
add_ignore = ["D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107", "D202"]
match_dir = '^(?!\.).*\.py'

[tool.mypy]
pretty = true
show_error_codes = true
disallow_untyped_defs = true
warn_return_any = false
namespace_packages = true
ignore_missing_imports = true
disable_error_code = ["operator", "index", "var-annotated"]

[tool.codespell]
skip = "*.ipynb,tests/data/*"
# Using lower case for doubleClick: https://github.com/codespell-project/codespell/issues/2375
ignore-words-list = "doubleclick"
